--- a/project-directory/css/style.css
+++ b/project-directory/css/style.css
@@ -13,12 +13,16 @@ h2{
   font-size: 30px;
 }
 h3{
+  padding: 20px;
   font-size: 20px;
 }
 img{
   float: right;
   width: 300px;
   padding:5px;
+}
+p{
+  padding: 5px;
 }
 ol{
   list-style-position: inside;
